# riley-sfml-utils

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
dependencies/riley-cpp-utils/: CMakeLists.txt
include/r3/sfml/geometry/: r3-sfml-Ellipse.hpp
include/r3/sfml/text/: r3-sfml-FontFamily.hpp  r3-sfml-MultilineTextUtils.hpp  r3-sfml-MultilineTypesettingBlock.hpp  r3-sfml-TextUtils.hpp  r3-sfml-typesetting-defn.hpp
licences/: licenses.txt
src/examples/r3/sfml/: CMakeLists.txt
src/examples/r3/sfml/text/: CMakeLists.txt
src/examples/r3/sfml/text/FontFamilyExample/: CMakeLists.txt  FontFamilyExample-main.cpp
src/examples/r3/sfml/text/MultilineTextExample/: CMakeLists.txt  MultilineTextExample-main.cpp
src/main/r3/sfml/: CMakeLists.txt
src/main/r3/sfml/geometry/: CMakeLists.txt  r3-sfml-Ellipse.cpp
src/main/r3/sfml/text/: CMakeLists.txt  r3-sfml-FontFamily.cpp  r3-sfml-MultilineTextUtils.cpp  r3-sfml-MultilineTypesettingBlock.cpp  r3-sfml-TextUtils.cpp
src/test/r3/sfml/: CMakeLists.txt
src/test/r3/sfml/geometry/EllipseTests/: CMakeLists.txt  EllipseTests-main.cpp
src/test/r3/sfml/text/FontFamilyTests/: CMakeLists.txt  FontFamilyTests-main.cpp
src/test/r3/sfml/text/MultilineTypesettingBlockTests/: CMakeLists.txt  MultilineTypesettingBlockTests-main.cpp
src/test/r3/sfml/text/SfmlTextDiscoveryTests/: CMakeLists.txt  SfmlTextDiscoveryTests-main.cpp
src/test/r3/sfml/text/TextUtilsTests/: CMakeLists.txt  TextUtilsTests-main.cpp
